# p21-api/openapi.yaml
@@ -95,3 +95,17 @@ paths:
           description: Order status
         '404':
           description: Order not found
+  /orders/status/{id}:
+    get:
+      summary: Retrieve order status from P21
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Order details
+        '404':
+          description: Order not found
